+ Basic color wrap

--- a/public/index.html
+++ b/public/index.html
@@ -37,11 +37,44 @@
             margin<input type="number" name="name" value=""> <br>
             border radius<input type="number" name="name" value=""> <br>
             <div class="basic_color">
-              <div class="">
-                
+              basic color
+              <div class="color_wrap">
+              <div class="green_sea">
+                <p>green sea</p>
+                <p>#16A085</p>
+              </div>
+              <div class="emerland">
+                <p>emerland</p>
+                <p>#2ECC71</p>
+              </div>
+              <div class="nephritis">
+                <p>nephritis</p>
+                <p>#27AE60</p>
+              </div>
+              <div class="peter_river">
+                <p>peter river</p>
+                <p>#3498DB</p>
+              </div>
+              <div class="belizehole">
+                <p>belize hole</p>
+                <p>#2980B9</p>
+              </div>
+              <div class="amethyst">
+                <p>amethyst</p>
+                <p>#9B59B6</p>
+              </div>
+              <div class="Wisteria">
+                <p>Wisteria</p>
+                <p>#8e44ad</p>
+              </div>
+              <div class="wet_asphalt">
+                <p>wet asphalt</p>
+                <p>#34495E</p>
+              </div>
+              
               </div>
             </div>
-            color <div id="flat"></div>
+            color picker <div id="flat"></div>
           </div>
 
 
