--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
           <div class="form">
             text<input type="text" name="text" value=""> <br>
             font color<input type="text" name="text" value=""> <br>
-            font size<input type="text" name="text" value=""> <br>
+            font size<input type="number" name="text" value=""> <br>
             border<input type="number" name="name" value=""> <br>
             padding<input type="number" name="name" value=""> <br>
             margin<input type="number" name="name" value=""> <br>
@@ -71,7 +71,7 @@
                 <p>wet asphalt</p>
                 <p>#34495E</p>
               </div>
-              
+
               </div>
             </div>
             color picker <div id="flat"></div>
