Add basic button

--- a/public/index.html
+++ b/public/index.html
@@ -82,12 +82,33 @@
 
 
 
+<div class="">
 
 
-        alert pro nove buttony od lidi
-        vlastni button - generator
-        search
-        fullscreen mod
+  <button class="btn basic" title="basic">button</button>
+
+    <button class="btn one" title="one">button</button>
+
+    <button class="btn two" title="two">button</button>
+
+    <button class="btn three" title="three">button</button>
+
+    <button class="btn four" title="four">button</button>
+
+    <button class="btn five" title="five">button</button>
+
+
+</div>
+
+
+
+<p>
+  alert pro nove buttony od lidi
+  vlastni button - generator
+  search
+  fullscreen mod
+</p>
+
 
 
 
