Add search bar -not  working now

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="author" content="Aleš Mráz">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="bower_components\jquery-colpick\css\colpick.css" type="text/css"/>
+    <link rel="stylesheet" href="bower_components\components-font-awesome\css\font-awesome.min.css">
     <!-- Place favicon.ico in the root directory -->
     <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
     <meta name="description" content="description description 155 word"> <!-- change -->
@@ -69,7 +70,7 @@
               </div>
               <div class="wet_asphalt">
                 <p>wet asphalt</p>
-                <p>#34495E</p>
+            s    <p>#34495E</p>
               </div>
 
               </div>
@@ -81,9 +82,18 @@
     	<div class="col span_1_of_2 main_col">
 
 
+        <div class="wrap">
+    <div class="search">
+      <input type="text" class="searchTerm" placeholder="What are you looking for?">
+      <button type="submit" class="searchButton">
+        <i class="fa fa-search" aria-hidden="true"></i>
+      </button>
+    </div>
+  </div>
 
-<div class="">
 
+
+<div class="button">
 
   <button class="btn basic" title="basic">button</button>
 
