Add live search for button!

--- a/public/index.html
+++ b/public/index.html
@@ -81,36 +81,50 @@
     	</div>
     	<div class="col span_1_of_2 main_col">
 
-
+<div id="users">
         <div class="wrap">
-    <div class="search">
-      <input type="text" class="searchTerm" placeholder="What are you looking for?">
-      <button type="submit" class="searchButton">
-        <i class="fa fa-search" aria-hidden="true"></i>
-      </button>
-    </div>
-  </div>
+          <div class="search">
+            <input type="search" class="searchTerm" placeholder="What are you looking for?">
+            <button type="submit" class="searchButton">
+              <i class="fa fa-search" aria-hidden="true"></i>
+            </button>
+          </div>
+        </div>
+
+<div class="button list">
+  <li>
+    <div class="srch"><button class="btn basic" title="basic">button</button></div>
+  </li>
+
+    <li>
+    <div class="srch"><button class="btn one" title="one">button</button></div>
+    </li>
 
 
+    <li>
+      <div class="srch"><button class="btn two" title="two">button</button></div>
+    </li>
 
-<div class="button">
 
-  <button class="btn basic" title="basic">button</button>
+    <li>
+    <div class="srch"><button class="btn three" title="three">button</button></div>
+    </li>
 
-    <button class="btn one" title="one">button</button>
 
-    <button class="btn two" title="two">button</button>
+    <li>
+    <div class="srch"><button class="btn four" title="four">button</button></div>
+    </li>
 
-    <button class="btn three" title="three">button</button>
 
-    <button class="btn four" title="four">button</button>
+    <li>
+    <div class="srch"><button class="btn five" title="five">button</button></div>
+    </li>
 
-    <button class="btn five" title="five">button</button>
 
 
 </div>
-
-
+<div class="no-result">No Result</div>
+</div>
 
 <p>
   alert pro nove buttony od lidi
@@ -118,25 +132,6 @@
   search
   fullscreen mod
 </p>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -162,7 +157,7 @@
 <!-- scripts -->
 <script src="bower_components\jQuery\dist\jquery.min.js" charset="utf-8"></script>
 <script src="bower_components\jquery-colpick\js\colpick.js" type="text/javascript"></script>
-
+<script src="bower_components\list.js\dist\list.min.js"></script>
 
 <!-- main script -->
 <script src="script/script.js" charset="utf-8"></script>
