--- a/public/index.html
+++ b/public/index.html
@@ -146,8 +146,11 @@
 
 
 <p>
-  vlastni button - generator
-  fullscreen mod
+  vlastni button - generator <br>
+  fullscreen mod <br>
+  ovladatelny nastaveni tlacitek <br>
+  mobile-fr <br>
+  
 </p>
 
 
